[gd_scene load_steps=9 format=3 uid="uid://cjhfshmg6kwfk"]

[ext_resource type="FontFile" uid="uid://bxd7ohu8flja0" path="res://style/NotJamOldStyle14.ttf" id="1_hvgcl"]
[ext_resource type="Shader" path="res://style/label_wave.gdshader" id="1_mr1eo"]
[ext_resource type="Script" path="res://settings.gd" id="1_tv8ry"]

[sub_resource type="Theme" id="Theme_2suwh"]
default_font = ExtResource("1_hvgcl")
default_font_size = 16

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tl0as"]
shader = ExtResource("1_mr1eo")
shader_parameter/height = 1.0
shader_parameter/frequency = 1.0
shader_parameter/speed = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lfamf"]
shader = ExtResource("1_mr1eo")
shader_parameter/height = 1.0
shader_parameter/frequency = 1.0
shader_parameter/speed = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kups4"]
shader = ExtResource("1_mr1eo")
shader_parameter/height = 1.0
shader_parameter/frequency = 1.0
shader_parameter/speed = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j7m2b"]
shader = ExtResource("1_mr1eo")
shader_parameter/height = 1.0
shader_parameter/frequency = 1.0
shader_parameter/speed = 1.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_2suwh")
script = ExtResource("1_tv8ry")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -357.0
offset_top = -96.0
offset_right = 358.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_tl0as")
layout_mode = 2
text = "Master Volume"

[node name="VolumeMaster" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -72.0
max_value = 0.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
material = SubResource("ShaderMaterial_lfamf")
layout_mode = 2
text = "Music Volume"

[node name="VolumeMusic" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -72.0
max_value = 0.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
material = SubResource("ShaderMaterial_kups4")
layout_mode = 2
text = "SFX Volume"

[node name="VolumeSFX" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -72.0
max_value = 0.0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_j7m2b")
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VolumeMaster" to="." method="_on_volume_master_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/VolumeMusic" to="." method="_on_volume_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/VolumeSFX" to="." method="_on_volume_sfx_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
